--- a/roles/resticprofile/templates/profiles.yaml
+++ b/roles/resticprofile/templates/profiles.yaml
@@ -36,6 +36,7 @@ default:
       # Media
       - /mnt/storage/media/backup
       - /mnt/storage/media/documents
+      - /mnt/storage/media/music
 
       # Docker containers
       # Nextcloud
@@ -70,6 +71,9 @@ default:
       # vikunja
       - /mnt/appdata/docker/vikunja
 
+      # navidrome
+      - /mnt/appdata/docker/navidrome
+
     exclude:
       # General
       - node_modules
@@ -80,6 +84,10 @@ default:
 
       # Data
       - /mnt/storage/data/Downloads
+
+      # Docker
+      # Docker containers
+      - /mnt/appdata/docker/navidrome/cache
 
     schedule: "04:00"
     schedule-permission: system
