--- a/roles/resticprofile/templates/profiles.yaml
+++ b/roles/resticprofile/templates/profiles.yaml
@@ -105,6 +105,10 @@ default:
     schedule-permission: system
     schedule-lock-wait: 1h
     schedule-log: /mnt/appdata/docker/resticprofile/logs/forget.log
+    send-after-fail:
+      - body: "Restic forget failed"
+        method: POST
+        url: "https://hc-ping.com/{{ vault_resticprofile_healthcheck_id }}/fail"
 
   check:
     schedule: "06:00"
