--- a/roles/nzb/defaults/main.yml
+++ b/roles/nzb/defaults/main.yml
@@ -4,6 +4,7 @@ service_name: nzb
 nzb_data_root:
 
 nzb_sabnzbd_config_dir: "{{ docker_container_data_root }}/sabnzbd"
+nzb_sabnzbd_scripts_dir: "{{ nzb_sabnzbd_config_dir }}/scripts"
 
 nzb_sonarr_config_dir: "{{ docker_container_data_root }}/sonarr"
 
