--- a/roles/watchtower/tasks/main.yml
+++ b/roles/watchtower/tasks/main.yml
@@ -5,6 +5,7 @@
     image: containrrr/watchtower
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - /root/.docker/config.json:/config.json:ro
     command: --interval 28800 --cleanup --no-startup-message
     env:
       WATCHTOWER_NOTIFICATIONS: "shoutrrr"
