make compose path dynamic

--- a/roles/nextcloud/defaults/main.yml
+++ b/roles/nextcloud/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 service_name: nextcloud
 
-nextcloud_compose_file: "{{ docker_compose_root }}/nextcloud/docker-compose.yml"
+nextcloud_compose_file: "{{ docker_compose_root }}/{{ service_name }}/docker-compose.yml"
 
 nextcloud_dir: "{{ docker_container_data_root }}/nextcloud"
 nextcloud_app_dir: "{{ nextcloud_dir }}/app"
