--- a/roles/paperless-ngx/defaults/main.yml
+++ b/roles/paperless-ngx/defaults/main.yml
@@ -1,6 +1,8 @@
 ---
 service_name: paperless-ngx
 
+paperless_compose_file: "{{ docker_compose_root }}/{{ service_name }}/docker-compose.yml"
+
 paperless_dir: "{{ docker_container_data_root }}/{{ service_name }}"
 
 paperless_redis_data_dir: "{{ paperless_dir }}/redis"
