--- a/roles/photoprism/defaults/main.yml
+++ b/roles/photoprism/defaults/main.yml
@@ -1,6 +1,8 @@
 ---
 service_name: photoprism
 
+photoprism_compose_file: "{{ docker_compose_root }}/{{ service_name }}/docker-compose.yml"
+
 photoprism_dir: "{{ docker_container_data_root }}/{{ service_name }}"
 
 photoprism_app_dir: "{{ photoprism_dir }}/app"
