--- a/roles/nextcloud/tasks/main.yml
+++ b/roles/nextcloud/tasks/main.yml
@@ -13,3 +13,5 @@
   community.docker.docker_compose_v2:
     project_name: "{{ service_name }}"
     project_src: "{{ nextcloud_compose_file | dirname }}"
+  vars:
+    ansible_python_interpreter: "{{ ansible_docker_venv_bin }}"
