--- a/roles/paperless-ngx/tasks/main.yml
+++ b/roles/paperless-ngx/tasks/main.yml
@@ -20,3 +20,5 @@
   community.docker.docker_compose_v2:
     project_name: "{{ service_name }}"
     project_src: "{{ paperless_compose_file | dirname }}"
+  vars:
+    ansible_python_interpreter: "{{ ansible_docker_venv_bin }}"
