migrate recipes to docker_compose_v2

--- a/roles/tandoor-recipes/defaults/main.yml
+++ b/roles/tandoor-recipes/defaults/main.yml
@@ -1,5 +1,9 @@
 ---
 service_name: recipes
+
+recipes_compose_file: "{{ docker_compose_root }}/{{ service_name }}/docker-compose.yml"
+recipes_compose_dir: "{{ recipes_compose_file | dirname }}"
+
 recipes_dir: "{{ docker_container_data_root }}/{{ service_name }}"
 
 recipes_app_dir: "{{ recipes_dir }}/app"
