--- a/roles/shelly-monitoring/defaults/main.yml
+++ b/roles/shelly-monitoring/defaults/main.yml
@@ -2,6 +2,8 @@
 # defaults file for roles/shelly-monitoring
 service_name: shelly-monitoring
 
+shelly_compose_file: "{{ docker_compose_root }}/{{ service_name }}/docker-compose.yml"
+
 shelly_config_root: "{{ docker_container_data_root }}/shelly"
 shelly_mosquitto_config_dir: "{{ shelly_config_root }}/mosquitto"
 shelly_mqtt_explorer_config_dir: "{{ shelly_config_root }}/mqtt-explorer"
