--- a/roles/shelly-monitoring/handlers/main.yml
+++ b/roles/shelly-monitoring/handlers/main.yml
@@ -4,9 +4,13 @@
     name: telegraf
     state: started
     restart: true
+  vars:
+    ansible_python_interpreter: "{{ ansible_docker_venv_bin }}"
 
 - name: restart_prometheus
   community.docker.docker_container:
     name: prometheus
     state: started
     restart: true
+  vars:
+    ansible_python_interpreter: "{{ ansible_docker_venv_bin }}"
