--- a/roles/actual-budget/tasks/main.yml
+++ b/roles/actual-budget/tasks/main.yml
@@ -8,7 +8,9 @@
     restart_policy: unless-stopped
     labels:
       traefik.enable: "true"
-      traefik.http.routers.actual.rule: "Host(`actual.{{ public_domain }}`) && {{ traefik_internal_client_ip }}"
+      traefik.http.routers.actual.rule: "Host(`actual.{{ public_domain }}`) && {{ traefik_internal_client_ip_v3 }}"
       traefik.http.services.actual.loadbalancer.server.port: "5006"
     networks:
       - name: "{{ traefik_network_name }}"
+  vars:
+    ansible_python_interpreter: "{{ ansible_docker_venv_bin }}"
