--- a/roles/adguard-home/tasks/main.yml
+++ b/roles/adguard-home/tasks/main.yml
@@ -39,10 +39,12 @@
     restart_policy: unless-stopped
     labels:
       traefik.enable: "true"
-      traefik.http.routers.adguard.rule: "Host(`adguard.{{ public_domain }}`) && {{ traefik_internal_client_ip }}"
+      traefik.http.routers.adguard.rule: "Host(`adguard.{{ public_domain }}`) && {{ traefik_internal_client_ip_v3 }}"
       traefik.http.services.adguard.loadbalancer.server.port: "80"
     networks:
       - name: "{{ traefik_network_name }}"
     healthcheck:
       # Workaround for https://github.com/AdguardTeam/AdGuardHome/issues/5714
       test: ["NONE"]
+  vars:
+    ansible_python_interpreter: "{{ ansible_docker_venv_bin }}"
