fix dufs interpreter and router rule

--- a/roles/dufs/tasks/main.yml
+++ b/roles/dufs/tasks/main.yml
@@ -9,7 +9,7 @@
 - name: "Ensure {{ service_name }} is running as a docker container"
   community.docker.docker_container:
     name: "{{ service_name }}"
-    image: sigoden/dufs
+    image: sigoden/dufs:latest
     command:
       - /data
       - --allow-upload
@@ -22,7 +22,9 @@
     restart_policy: unless-stopped
     labels:
       traefik.enable: "true"
-      traefik.http.routers.dufs.rule: "Host(`files.{{ public_domain }}`)  && {{ traefik_internal_client_ip }}"
+      traefik.http.routers.dufs.rule: "Host(`files.{{ public_domain }}`) && {{ traefik_internal_client_ip_v3 }}"
       traefik.http.services.dufs.loadbalancer.server.port: "5000"
     networks:
       - name: "{{ traefik_network_name }}"
+  vars:
+    ansible_python_interpreter: "{{ ansible_docker_venv_bin }}"
