fix jdownloader interpreter and router rule

--- a/roles/jdownloader2/tasks/main.yml
+++ b/roles/jdownloader2/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: "Ensure {{ service_name }} is running as a docker container"
   community.docker.docker_container:
     name: "{{ service_name }}"
-    image: jlesage/jdownloader-2
+    image: jlesage/jdownloader-2:latest
     volumes:
       - "{{ docker_container_data_root }}/{{ service_name }}:/config"
       - "{{ jdownloader_download_dir }}:/output"
@@ -12,8 +12,10 @@
       GROUP_ID: "{{ docker_container_pgid | string }}"
     labels:
       traefik.enable: "true"
-      traefik.http.routers.jdownloader.rule: "Host(`jdownloader.{{ public_domain }}`) && {{ traefik_internal_client_ip }}"
+      traefik.http.routers.jdownloader.rule: "Host(`jdownloader.{{ public_domain }}`) && {{ traefik_internal_client_ip_v3 }}"
       traefik.http.routers.jdownloader.middlewares: "authelia@docker"
       traefik.http.services.jdownloader.loadbalancer.server.port: "5800"
     networks:
       - name: "{{ traefik_network_name }}"
+  vars:
+    ansible_python_interpreter: "{{ ansible_docker_venv_bin }}"
