fix portainer interpreter and router rule

--- a/roles/portainer/tasks/main.yml
+++ b/roles/portainer/tasks/main.yml
@@ -2,14 +2,16 @@
 - name: "Ensure portainer is running as a docker container"
   community.docker.docker_container:
     name: "{{ service_name }}"
-    image: portainer/portainer-ce
+    image: portainer/portainer-ce:latest
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - "{{ portainer_config_dir }}:/data"
     restart_policy: unless-stopped
     labels:
       traefik.enable: "true"
-      traefik.http.routers.portainer.rule: "Host(`{{ service_name }}.{{ public_domain }}`) && {{ traefik_internal_client_ip }}"
+      traefik.http.routers.portainer.rule: "Host(`{{ service_name }}.{{ public_domain }}`) && {{ traefik_internal_client_ip_v3 }}"
       traefik.http.services.portainer.loadbalancer.server.port: "9000"
     networks:
       - name: "{{ traefik_network_name }}"
+  vars:
+    ansible_python_interpreter: "{{ ansible_docker_venv_bin }}"
