--- a/roles/speedtest/tasks/main.yml
+++ b/roles/speedtest/tasks/main.yml
@@ -8,8 +8,10 @@
     restart_policy: unless-stopped
     labels:
       traefik.enable: "true"
-      traefik.http.routers.speedtest.rule: "Host(`{{ service_name }}.{{ public_domain }}`) && {{ traefik_internal_client_ip }}"
+      traefik.http.routers.speedtest.rule: "Host(`{{ service_name }}.{{ public_domain }}`) && {{ traefik_internal_client_ip_v3 }}"
       traefik.http.services.speedtest.loadbalancer.server.port: "80"
       traefik.docker.network: "traefik"
     networks:
       - name: "{{ traefik_network_name }}"
+  vars:
+    ansible_python_interpreter: "{{ ansible_docker_venv_bin }}"
