--- a/roles/webtop/tasks/main.yml
+++ b/roles/webtop/tasks/main.yml
@@ -15,7 +15,7 @@
       - name: "{{ traefik_network_name }}"
     labels:
       traefik.enable: "true"
-      traefik.http.routers.webtop.rule: "Host(`webtop.{{ public_domain }}`)  && {{ traefik_internal_client_ip }}"
+      traefik.http.routers.webtop.rule: "Host(`webtop.{{ public_domain }}`)  && {{ traefik_internal_client_ip_v3 }}"
       traefik.http.services.webtop.loadbalancer.server.port: "3000"
       traefik.http.routers.webtop.middlewares: "authelia@docker"
       traefik.http.middlewares.webtoplossless.headers.customResponseHeaders.Cross-Origin-Embedder-Policy: "require-corp"
@@ -26,3 +26,5 @@
       TZ: Europe/Berlin
       PUID: "{{ docker_container_puid | string }}"
       PGID: "{{ docker_container_pgid | string }}"
+  vars:
+    ansible_python_interpreter: "{{ ansible_docker_venv_bin }}"
