fix config typo (thx @MalteP)

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,5 +3,5 @@ inventory = hosts
 roles_path = ./galaxy/roles:./roles
 collections_path = ./galaxy/collections
 
-[ssh_connections]
+[ssh_connection]
 pipelineing = true
