--- a/roles/audiobookshelf/tasks/main.yml
+++ b/roles/audiobookshelf/tasks/main.yml
@@ -11,7 +11,7 @@
     restart_policy: unless-stopped
     labels:
       traefik.enable: "true"
-      traefik.http.routers.audiobookshelf.rule: "Host(`{{ service_name }}.{{ public_domain }}`) && {{ traefik_internal_client_ip_v3 }}"
+      traefik.http.routers.audiobookshelf.rule: "Host(`{{ service_name }}.{{ public_domain }}`)"
       traefik.http.services.audiobookshelf.loadbalancer.server.port: "80"
     networks:
       - name: "{{ traefik_network_name }}"
