--- a/roles/authelia/templates/configuration.yml
+++ b/roles/authelia/templates/configuration.yml
@@ -1,27 +1,16 @@
 ---
-###############################################################
-#                   Authelia configuration                    #
-###############################################################
-
-# This secret can also be set using the env variables AUTHELIA_JWT_SECRET_FILE
-jwt_secret: yKoJddqzKVY2zvmVBAtiKYFSyqgq3cYo9y4uZDMg5az3mjzLcYVJnWH75vqjzDzQ
-default_redirection_url: "https://auth.{{ public_domain }}"
+identity_validation:
+  reset_password:
+    jwt_secret: yKoJddqzKVY2zvmVBAtiKYFSyqgq3cYo9y4uZDMg5az3mjzLcYVJnWH75vqjzDzQ
 
 server:
-  host: 0.0.0.0
-  port: 9091
+  address: "0.0.0.0:9091"
 
 log:
   level: info
 
 totp:
   issuer: "{{ public_domain }}"
-
-# duo_api:
-#  hostname: api-123456789.example.com
-#  integration_key: ABCDEF
-#  # This secret can also be set using the env variables AUTHELIA_DUO_API_SECRET_KEY_FILE
-#  secret_key: 1234567890abcdefghifjkl
 
 authentication_backend:
   file:
@@ -45,13 +34,13 @@ access_control:
         - '^\/scene\/\d+\/stream'
 
 session:
-  name: authelia_session
-  domain: "{{ public_domain }}"
-  same_site: lax
   secret: j97PjFn8LczPfq4HKMrckR3WzsgZPYhaD92Q3hzE7Es5wUmG8csEucE8cHTWLMMV
-  expiration: 1h
-  inactivity: 5m
-  remember_me_duration: 1M
+  name: authelia_session
+
+  cookies:
+    - domain: "{{ public_domain }}"
+      authelia_url: "https://auth.{{ public_domain }}"
+      name: "authelia_session"
 
   redis:
     host: redis
